@@ -1,4 +1,5 @@
-06292013 -> jonnyboy ->	removed hard coded db name from clean_nzb, added safety argv
+06292013 -> jonnyboy ->	added simple script to run all threaded scripts sequentially
+						removed hard coded db name from clean_nzb, added safety argv
 						made tmux colors array user defineable
 						changed query for music to process
 						added output to start of threaded scripts
